; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_tx4938ide.c_tx4938ide_set_pio_mode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_tx4938ide.c_tx4938ide_set_pio_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_9__* }
%struct.TYPE_9__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { %struct.tx4938ide_platform_info* }
%struct.tx4938ide_platform_info = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_10__*, i32)* @tx4938ide_set_pio_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tx4938ide_set_pio_mode(%struct.TYPE_10__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_10__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_9__*, align 8
  %6 = alloca %struct.tx4938ide_platform_info*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_10__*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  store %struct.TYPE_9__* %11, %struct.TYPE_9__** %5, align 8
  %12 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %12, i32 0, i32 0
  %14 = load %struct.TYPE_8__*, %struct.TYPE_8__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %14, i32 0, i32 0
  %16 = load %struct.tx4938ide_platform_info*, %struct.tx4938ide_platform_info** %15, align 8
  store %struct.tx4938ide_platform_info* %16, %struct.tx4938ide_platform_info** %6, align 8
  %17 = load i32, i32* %4, align 4
  store i32 %17, i32* %7, align 4
  %18 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %19 = call %struct.TYPE_10__* @ide_get_pair_dev(%struct.TYPE_10__* %18)
  store %struct.TYPE_10__* %19, %struct.TYPE_10__** %8, align 8
  %20 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %21 = icmp ne %struct.TYPE_10__* %20, null
  br i1 %21, label %22, label %27

22:                                               ; preds = %2
  %23 = load i32, i32* %7, align 4
  %24 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %25 = call i32 @ide_get_best_pio_mode(%struct.TYPE_10__* %24, i32 255, i32 5)
  %26 = call i32 @min(i32 %23, i32 %25)
  store i32 %26, i32* %7, align 4
  br label %27

27:                                               ; preds = %22, %2
  %28 = load %struct.tx4938ide_platform_info*, %struct.tx4938ide_platform_info** %6, align 8
  %29 = getelementptr inbounds %struct.tx4938ide_platform_info, %struct.tx4938ide_platform_info* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.tx4938ide_platform_info*, %struct.tx4938ide_platform_info** %6, align 8
  %32 = getelementptr inbounds %struct.tx4938ide_platform_info, %struct.tx4938ide_platform_info* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* %7, align 4
  %35 = call i32 @tx4938ide_tune_ebusc(i32 %30, i32 %33, i32 %34)
  ret void
}

declare dso_local %struct.TYPE_10__* @ide_get_pair_dev(%struct.TYPE_10__*) #1

declare dso_local i32 @min(i32, i32) #1

declare dso_local i32 @ide_get_best_pio_mode(%struct.TYPE_10__*, i32, i32) #1

declare dso_local i32 @tx4938ide_tune_ebusc(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
